Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignNumberIntObjWrapped.quorum
class Main
    action Main
        Integer int
        int:SetValue(5)
        number n = int
    end
end