Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignNumberBooleanWrapped.quorum
class main
    action Main
        number n = true
    end
end